--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     </head>
     <body>
         <h1>Hello World!!!</h1>
+        <h2>Outro hello world!!!</h2>
+        <span>Outro exemplo no arquivo</span>
     </body>
 </html>
