NEW: Add new resources in index file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     </head>
     <body>
         <h1>Hello World!!!</h1>
-        <h2>Outro hello world!!!</h2>
+        <h2 class="h2">Outro hello world!!!</h2>
         <span>Outro exemplo no arquivo</span>
+        <h3>Outro elemento</h3>
     </body>
 </html>
